替换图标库

--- a/common/src/main/res/drawable/icon_about.xml
+++ b/common/src/main/res/drawable/icon_about.xml
@@ -1,15 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="42dp"
-    android:height="42dp"
+    android:width="200dp"
+    android:height="200dp"
     android:viewportWidth="1024"
     android:viewportHeight="1024">
-    <path
-        android:fillColor="#FF373737"
-        android:pathData="M511.5,792.2c-20.8,0 -37.7,-16.9 -37.7,-37.7V422c0,-20.8 16.9,-37.7 37.7,-37.7s37.7,16.9 37.7,37.7v332.5c0,20.8 -16.9,37.7 -37.7,37.7z" />
-    <path
-        android:fillColor="#FF373737"
-        android:pathData="M511.5,298.8m-46.8,0a46.8,46.8 0,1 0,93.6 0,46.8 46.8,0 1,0 -93.6,0Z" />
-    <path
-        android:fillColor="#FF373737"
-        android:pathData="M511.5,962C264.7,962 64,761.3 64,514.5S264.7,67 511.5,67 959,267.7 959,514.5 758.3,962 511.5,962zM511.5,120.9c-217,0 -393.6,176.6 -393.6,393.6s176.6,393.6 393.6,393.6 393.6,-176.6 393.6,-393.6 -176.6,-393.6 -393.6,-393.6z" />
+  <path
+      android:pathData="M872.75,573.87a18.86,18.86 0,0 0,-22.06 15.45,322.9 322.9,0 0,1 -318.46,266.37c-178.39,0 -323.5,-145.07 -323.5,-323.5a323.41,323.41 0,0 1,591.7 -180.91,319.83 319.83,0 0,1 50.26,123.82 19.07,19.07 0,0 0,37.46 -6.66A356.95,356.95 0,0 0,832 329.98,361.3 361.3,0 0,0 532.22,170.67 361.43,361.43 0,0 0,170.67 532.18c0,199.38 162.22,361.56 361.56,361.56a360.87,360.87 0,0 0,355.93 -297.77,19.03 19.03,0 0,0 -15.36,-22.06"
+      android:fillColor="#8a8a8a"/>
+  <path
+      android:pathData="M532.22,411.31a20.14,20.14 0,0 0,-20.14 20.18v322.13a20.14,20.14 0,0 0,40.28 0v-322.13a20.14,20.14 0,0 0,-20.14 -20.18M552.36,310.61a20.14,20.14 0,0 0,-40.28 0v40.28a20.14,20.14 0,0 0,40.28 0v-40.32z"
+      android:fillColor="#8a8a8a"/>
 </vector>
