--- a/app_main/src/main/res/menu/menu_main.xml
+++ b/app_main/src/main/res/menu/menu_main.xml
@@ -19,13 +19,13 @@
         <menu>
             <item
                 android:id="@+id/menu_action_main_websites"
-                android:icon="@drawable/icon_manage"
+                android:icon="@drawable/icon_hot"
                 android:title="常用网站"
                 app:showAsAction="withText" />
 
             <item
                 android:id="@+id/menu_action_main_navigation"
-                android:icon="@drawable/icon_navigation"
+                android:icon="@drawable/icon_navigate"
                 android:title="导航"
                 app:showAsAction="withText" />
         </menu>
