--- a/common/src/main/res/layout/view_head_bar.xml
+++ b/common/src/main/res/layout/view_head_bar.xml
@@ -4,31 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
+    android:paddingEnd="10dp"
     tools:ignore="SpUsage,RtlSymmetry">
 
-    <app.itgungnir.kwa.common.widget.icon_font.IconFontView
+    <ImageView
         android:id="@+id/back"
-        android:layout_width="?attr/actionBarSize"
-        android:layout_height="0dp"
-        android:background="?android:attr/selectableItemBackground"
-        android:gravity="center"
-        android:textSize="@dimen/text_size_icon"
-        android:textStyle="bold"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="5dp"
+        android:contentDescription="@string/app_name"
+        android:foreground="@drawable/ripple_round"
+        android:padding="5dp"
+        android:src="@drawable/icon_back"
+        android:tint="@color/colorNavNormal"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/tools"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tools" />
 
-    <app.itgungnir.kwa.common.widget.icon_font.IconFontView
+    <ImageView
         android:id="@+id/menu"
-        android:layout_width="?attr/actionBarSize"
-        android:layout_height="0dp"
-        android:layout_alignParentEnd="true"
-        android:background="?android:attr/selectableItemBackground"
-        android:gravity="center"
-        android:text="@string/icon_menu"
-        android:textSize="@dimen/text_size_icon"
-        android:textStyle="bold"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:contentDescription="@string/app_name"
+        android:foreground="@drawable/ripple_round"
+        android:padding="5dp"
+        android:src="@drawable/icon_more"
+        android:tint="@color/colorNavNormal"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/tools"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +39,7 @@
     <LinearLayout
         android:id="@+id/tools"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="40dp"
         android:layout_toStartOf="@id/menu"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -50,8 +52,8 @@
         android:layout_height="0dp"
         android:ellipsize="end"
         android:gravity="center_vertical"
+        android:maxLines="1"
         android:paddingStart="20dp"
-        android:singleLine="true"
         android:textSize="@dimen/text_size_normal"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
