--- a/common/src/main/res/layout/view_head_bar_icon.xml
+++ b/common/src/main/res/layout/view_head_bar_icon.xml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<app.itgungnir.kwa.common.widget.icon_font.IconFontView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/icon"
-    android:layout_width="?attr/actionBarSize"
-    android:layout_height="?attr/actionBarSize"
-    android:background="?android:attr/selectableItemBackground"
-    android:gravity="center"
-    android:textSize="@dimen/text_size_icon"
-    android:textStyle="bold"
-    tools:ignore="SpUsage" />
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="40dp"
+    android:layout_height="40dp">
+
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:contentDescription="@string/app_name"
+        android:foreground="@drawable/ripple_round"
+        android:padding="5dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/icon_collect"
+        android:tint="@color/colorNavNormal" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="5dp"
+        android:visibility="gone" />
+
+</FrameLayout>
