--- a/app_main/src/main/res/layout/list_item_main_bottom_tab.xml
+++ b/app_main/src/main/res/layout/list_item_main_bottom_tab.xml
@@ -9,9 +9,10 @@
 
     <ImageView
         android:id="@+id/iconView"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:contentDescription="@string/app_name"
+        android:padding="3dp"
         android:scaleType="centerInside"
         android:src="@drawable/icon_home" />
 
