--- a/common/src/main/res/drawable/icon_back.xml
+++ b/common/src/main/res/drawable/icon_back.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M20,11H7.83l5.59,-5.59L12,4l-8,8 8,8 1.41,-1.41L7.83,13H20v-2z"/>
+    android:width="256dp"
+    android:height="256dp"
+    android:viewportWidth="1024"
+    android:viewportHeight="1024">
+  <path
+      android:pathData="M1095.29,482.54l-949.32,0 435.46,-387.06c15.04,-13.36 16.39,-36.39 3.03,-51.42 -13.36,-15.03 -36.38,-16.39 -51.42,-3.03L33.02,485.47c-7.78,6.91 -12.23,16.82 -12.23,27.22s4.45,20.31 12.23,27.22l500.01,444.44c6.94,6.17 15.58,9.2 24.18,9.2 10.04,0 20.04,-4.13 27.24,-12.23 13.36,-15.03 12.01,-38.06 -3.03,-51.42L160.56,555.81 1095.29,555.81c20.12,0 36.42,-16.52 36.42,-36.64S1115.4,482.54 1095.29,482.54z"
+      android:fillColor="#8a8a8a"/>
 </vector>
