--- a/app_main/src/main/res/layout/layout_nav_header.xml
+++ b/app_main/src/main/res/layout/layout_nav_header.xml
@@ -8,20 +8,21 @@
 
     <ImageView
         android:id="@+id/nav_header_avatar"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="80dp"
+        android:layout_height="64dp"
         android:layout_marginTop="25dp"
         android:contentDescription="@string/app_name"
-        android:src="@mipmap/ic_launcher" />
+        android:scaleType="centerCrop"
+        android:src="@drawable/icon_avatar" />
 
     <TextView
         android:id="@+id/nav_header_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="5dp"
         android:text="@string/app_name"
-        android:textColor="@color/colorPure"
+        android:textColor="@color/text_color_level_1"
         android:textSize="@dimen/text_size_large" />
 
 </LinearLayout>
