--- a/common/src/main/res/layout/view_head_bar_icon.xml
+++ b/common/src/main/res/layout/view_head_bar_icon.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="30dp"
-    android:layout_height="30dp">
+    android:layout_width="40dp"
+    android:layout_height="30dp"
+    android:paddingStart="5dp"
+    android:paddingEnd="5dp">
 
     <ImageView
         android:id="@+id/icon"
